--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc --build tsconfig.build.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "files": [
     "dist/**/*.js",
     "dist/**/*.d.ts"
-  ]
+  ],
+  "devDependencies": {
+    "@types/jest": "^28.1.7",
+    "ts-jest": "^28.0.8"
+  }
 }
