--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc --build tsconfig.build.json",
+    "build": "del-cli -f ./dist && webpack && npm-dts generate -e ./src/index.ts -o ./dist/index.d.ts",
     "test": "jest"
   },
   "files": [
@@ -14,6 +14,14 @@
   ],
   "devDependencies": {
     "@types/jest": "^28.1.7",
-    "ts-jest": "^28.0.8"
+    "del-cli": "^5.0.0",
+    "ts-jest": "^28.0.8",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.8.2",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "npm-dts": "^1.3.12"
   }
 }
