--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,5 +2,10 @@
     "extends": "./tsconfig.json",
     "include": [
         "./src"
+    ],
+    "exclude": [
+        "node_modules",
+        "dist",
+        "test"
     ]
 }
